I made a mistake nacho san

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
       <section class="home" id="home">
         <div class="container homeContent">
           <div class="leftHomeSect">
+            <h1 class="onlyfans">Sel<span class="mugiwara">ectly</span></h1>
             <p class="homeBody">
               Selectly is an AI-powered recruitment platform tailored for small
               and medium-sized businesses. It streamlines the hiring process by
